order, product, user dimension OK

--- a/data/customer_management_department/customer_management_department.ipynb
+++ b/data/customer_management_department/customer_management_department.ipynb
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "bd6211cb-eb05-4bd1-8542-a959f567ea5a",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "e52e8420-ad18-42ed-bf2a-51107c8d3870",
    "metadata": {},
    "outputs": [],
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "20536247-238c-498d-9e5e-fc4e86669613",
    "metadata": {},
    "outputs": [],
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "b7ad6389-8d78-40c5-9e61-d59c3f98f2e6",
    "metadata": {},
    "outputs": [],
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "da471c2d-ba74-449a-b3d2-955d0c28b76a",
    "metadata": {},
    "outputs": [],
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "2625e813-c3ec-405c-ae69-e8cf0077838c",
    "metadata": {},
    "outputs": [],
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "2905d6e4-da56-44d5-8e3f-4568caa7de0b",
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "a787d55b-2eee-4f42-8776-8536ae84c8eb",
    "metadata": {},
    "outputs": [],
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "78259e08-3db2-4c1c-bac4-6f367eb72875",
    "metadata": {},
    "outputs": [],
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "1d7f756a-3ecd-493c-a01b-d44e43dd4af8",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1860,7 @@
        "[1000 rows x 15 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "618ad10e-d670-4962-bd0f-95eea22b32d3",
    "metadata": {},
    "outputs": [],
@@ -1881,12 +1881,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "6c379e05-8fd4-46b3-8e0d-7802df166f1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_merged_data.to_parquet(\"column_order.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "18da33d6-1c1a-405e-a13e-cf6f67fffdd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 4791 entries, 0 to 4999\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   USER_ID             4791 non-null   object\n",
+      " 1   USER_CREATION_DATE  4791 non-null   object\n",
+      " 2   USER_NAME           4791 non-null   object\n",
+      " 3   USER_ADDR_STREET    4791 non-null   object\n",
+      " 4   USER_ADDR_STATE     4791 non-null   object\n",
+      " 5   USER_ADDR_CITY      4791 non-null   object\n",
+      " 6   USER_ADDR_COUNTRY   4791 non-null   object\n",
+      " 7   USER_BIRTHDATE      4791 non-null   object\n",
+      " 8   USER_GENDER         4791 non-null   object\n",
+      " 9   USER_DEVICE_ADDR    4791 non-null   object\n",
+      " 10  USER_TYPE           4791 non-null   object\n",
+      " 11  USER_JOB_TITLE      4791 non-null   object\n",
+      " 12  USER_JOB_LVL        4791 non-null   object\n",
+      " 13  USER_CC_NO          4791 non-null   int64 \n",
+      " 14  USER_ISSUING_BANK   4791 non-null   object\n",
+      "dtypes: int64(1), object(14)\n",
+      "memory usage: 598.9+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>USER_ID</th>\n",
+       "      <th>USER_CREATION_DATE</th>\n",
+       "      <th>USER_NAME</th>\n",
+       "      <th>USER_ADDR_STREET</th>\n",
+       "      <th>USER_ADDR_STATE</th>\n",
+       "      <th>USER_ADDR_CITY</th>\n",
+       "      <th>USER_ADDR_COUNTRY</th>\n",
+       "      <th>USER_BIRTHDATE</th>\n",
+       "      <th>USER_GENDER</th>\n",
+       "      <th>USER_DEVICE_ADDR</th>\n",
+       "      <th>USER_TYPE</th>\n",
+       "      <th>USER_JOB_TITLE</th>\n",
+       "      <th>USER_JOB_LVL</th>\n",
+       "      <th>USER_CC_NO</th>\n",
+       "      <th>USER_ISSUING_BANK</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USER40678</td>\n",
+       "      <td>2021-03-17</td>\n",
+       "      <td>ZION FEEST</td>\n",
+       "      <td>14938 WEST TRACE SIDE</td>\n",
+       "      <td>NEW JERSEY</td>\n",
+       "      <td>BIRMINGHAM</td>\n",
+       "      <td>HONG KONG</td>\n",
+       "      <td>1998-04-06</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>17:fb:f2:60:94:4b</td>\n",
+       "      <td>BASIC</td>\n",
+       "      <td>TECHNICIAN</td>\n",
+       "      <td>ACCOUNTS</td>\n",
+       "      <td>4294956114</td>\n",
+       "      <td>BPI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USER08728</td>\n",
+       "      <td>2022-10-10</td>\n",
+       "      <td>KATTIE BERGSTROM</td>\n",
+       "      <td>4476 WEST HAVEN FORT</td>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>IRVINE</td>\n",
+       "      <td>MAYOTTE</td>\n",
+       "      <td>2003-05-22</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>b0:17:a7:0b:d6:67</td>\n",
+       "      <td>PREMIUM</td>\n",
+       "      <td>TECHNICIAN</td>\n",
+       "      <td>SOLUTIONS</td>\n",
+       "      <td>2742902159</td>\n",
+       "      <td>BDO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USER29759</td>\n",
+       "      <td>2020-05-20</td>\n",
+       "      <td>AIDEN CORWIN</td>\n",
+       "      <td>59980 NORTH CREST CHESTER</td>\n",
+       "      <td>NORTH CAROLINA</td>\n",
+       "      <td>TAMPA</td>\n",
+       "      <td>IRAQ</td>\n",
+       "      <td>2008-08-29</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>24:f2:0b:88:2f:bd</td>\n",
+       "      <td>BASIC</td>\n",
+       "      <td>STUDENT</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>1917471950</td>\n",
+       "      <td>BDO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USER16806</td>\n",
+       "      <td>2021-05-28</td>\n",
+       "      <td>VINCE GISLASON</td>\n",
+       "      <td>541 RADIAL MOUTH</td>\n",
+       "      <td>ILLINOIS</td>\n",
+       "      <td>ORLANDO</td>\n",
+       "      <td>NEW ZEALAND</td>\n",
+       "      <td>2012-02-09</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>a4:f5:fd:fe:07:f9</td>\n",
+       "      <td>BASIC</td>\n",
+       "      <td>STUDENT</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>3290792253</td>\n",
+       "      <td>CHINABANK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USER27644</td>\n",
+       "      <td>2023-03-16</td>\n",
+       "      <td>ADELE OKUNEVA</td>\n",
+       "      <td>896 GLEN BURY</td>\n",
+       "      <td>ARIZONA</td>\n",
+       "      <td>RENO</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>1976-10-13</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>ac:80:b3:bc:8d:5f</td>\n",
+       "      <td>PREMIUM</td>\n",
+       "      <td>ASSOCIATE</td>\n",
+       "      <td>USABILITY</td>\n",
+       "      <td>2313395832</td>\n",
+       "      <td>CHINABANK</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     USER_ID USER_CREATION_DATE         USER_NAME           USER_ADDR_STREET  \\\n",
+       "0  USER40678         2021-03-17        ZION FEEST      14938 WEST TRACE SIDE   \n",
+       "1  USER08728         2022-10-10  KATTIE BERGSTROM       4476 WEST HAVEN FORT   \n",
+       "2  USER29759         2020-05-20      AIDEN CORWIN  59980 NORTH CREST CHESTER   \n",
+       "3  USER16806         2021-05-28    VINCE GISLASON           541 RADIAL MOUTH   \n",
+       "4  USER27644         2023-03-16     ADELE OKUNEVA              896 GLEN BURY   \n",
+       "\n",
+       "  USER_ADDR_STATE USER_ADDR_CITY USER_ADDR_COUNTRY USER_BIRTHDATE USER_GENDER  \\\n",
+       "0      NEW JERSEY     BIRMINGHAM         HONG KONG     1998-04-06        MALE   \n",
+       "1         ALABAMA         IRVINE           MAYOTTE     2003-05-22        MALE   \n",
+       "2  NORTH CAROLINA          TAMPA              IRAQ     2008-08-29      FEMALE   \n",
+       "3        ILLINOIS        ORLANDO       NEW ZEALAND     2012-02-09        MALE   \n",
+       "4         ARIZONA           RENO            MEXICO     1976-10-13        MALE   \n",
+       "\n",
+       "    USER_DEVICE_ADDR USER_TYPE USER_JOB_TITLE USER_JOB_LVL  USER_CC_NO  \\\n",
+       "0  17:fb:f2:60:94:4b     BASIC     TECHNICIAN     ACCOUNTS  4294956114   \n",
+       "1  b0:17:a7:0b:d6:67   PREMIUM     TECHNICIAN    SOLUTIONS  2742902159   \n",
+       "2  24:f2:0b:88:2f:bd     BASIC        STUDENT          N/A  1917471950   \n",
+       "3  a4:f5:fd:fe:07:f9     BASIC        STUDENT          N/A  3290792253   \n",
+       "4  ac:80:b3:bc:8d:5f   PREMIUM      ASSOCIATE    USABILITY  2313395832   \n",
+       "\n",
+       "  USER_ISSUING_BANK  \n",
+       "0               BPI  \n",
+       "1               BDO  \n",
+       "2               BDO  \n",
+       "3         CHINABANK  \n",
+       "4         CHINABANK  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merged_data.info()\n",
+    "df_merged_data.head()"
    ]
   },
   {
@@ -1899,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "6d656b4a-c750-4c7d-9040-869349d15841",
    "metadata": {},
    "outputs": [],
@@ -1911,13 +2118,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "7359ef8a-2304-4a26-893e-b8d1954e0f3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#df_user_job.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b1f0f13-6be4-4496-a18c-36a5acaa488e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06b96d10-8ae6-430d-a145-eed258d7dbfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1b8591a-a295-4e05-840d-b32b88d4e463",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f47abde-5da7-486b-848a-f6ab65726ee3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92551416-d598-4389-baf6-700f646861dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60dd1dc6-2881-4dd5-9ce6-884846e40b09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c0bd63-7211-4751-93e4-279807b10301",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1936,7 +2199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
