--- a/data_pipeline/data_pipeline_operations_department/data_cleaning_operations_department.ipynb
+++ b/data_pipeline/data_pipeline_operations_department/data_cleaning_operations_department.ipynb
@@ -1620,7 +1620,7 @@
    "id": "86a138ba-432e-4bed-b632-f331b80812d4",
    "metadata": {},
    "source": [
-    "# Separate Cleaned Data into respective tables for checking"
+    "# Separate Cleaned Data into respective tables"
    ]
   },
   {
@@ -2938,7 +2938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df9b19f0-ad40-4ef3-8a3c-bf1585523c85",
+   "id": "1bc53880-b919-4cb0-a85d-db2edf148063",
    "metadata": {},
    "outputs": [],
    "source": []
