--- a/data_pipeline/data_pipeline_load_to_database/load_to_database.ipynb
+++ b/data_pipeline/data_pipeline_load_to_database/load_to_database.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "7d509cee-f181-4726-ab20-a65074a56113",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Succesfuly Loaded Data\n"
+      "Succesfuly Loaded Operations Department Data\n",
+      "Succesfuly Loaded Dimensions\n"
      ]
     }
    ],
@@ -46,13 +47,20 @@
     "\n",
     "# Operations Department\n",
     "df_order_data = pd.read_parquet('../data_pipeline_operations_department/data_pipeline_operations_department_09_corrected_users/order_data.parquet')\n",
+    "df_order_delays = pd.read_parquet('../data_pipeline_operations_department/data_pipeline_operations_department_09_corrected_users/order_delays.parquet')\n",
+    "df_line_item_data_prices = pd.read_parquet('../data_pipeline_operations_department/data_pipeline_operations_department_09_corrected_users/line_item_data_prices.parquet')\n",
+    "df_line_item_data_products = pd.read_parquet('../data_pipeline_operations_department/data_pipeline_operations_department_09_corrected_users/line_item_data_products.parquet')\n",
+    "print(\"Succesfuly Loaded Operations Department Data\")\n",
+    "\n",
+    "# Business Department\n",
+    "df_product_list = pd.read_parquet('../data_pipeline_business_department/data_pipeline_04_type_changing/product_list.parquet')\n",
     "\n",
     "\n",
     "# Load Dimension tables\n",
     "\n",
     "df_order_dimension = pd.read_parquet('../data_pipeline_operations_department/data_pipeline_operations_department_09_corrected_users/order_dimension.parquet')\n",
     "\n",
-    "df_product_dimension = pd.read_parquet('../data_pipeline_business_department/data_pipeline_05_structuring_columns/product_final_list.parquet')\n",
+    "df_product_dimension = pd.read_parquet('../data_pipeline_business_department/data_pipeline_05_structuring_columns/product_dimension.parquet')\n",
     "\n",
     "df_user_dimension = pd.read_parquet('../data_pipeline_customer_management_department/data_pipeline_07_fix_column_order/column_order.parquet')\n",
     "\n",
@@ -62,12 +70,12 @@
     "\n",
     "df_campaign_dimension = pd.read_parquet('../data_pipeline_marketing_department/data_pipeline_marketing_department_02_campaign/campaign_data_uppercase.parquet')\n",
     "\n",
-    "print(\"Succesfuly Loaded Data\")"
+    "print(\"Succesfuly Loaded Dimensions\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "1569f959-6571-46b8-b3eb-85253eee3424",
    "metadata": {},
    "outputs": [
@@ -75,23 +83,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1701482, 9)\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1701482 entries, 0 to 1701481\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column             Dtype         \n",
-      "---  ------             -----         \n",
-      " 0   ORDER_ID           object        \n",
-      " 1   USER_ID            object        \n",
-      " 2   ESTIMATED_ARRIVAL  object        \n",
-      " 3   TRANSACTION_DATE   datetime64[ns]\n",
-      " 4   PRODUCT_NAME       object        \n",
-      " 5   PRODUCT_ID         object        \n",
-      " 6   PRICE              float64       \n",
-      " 7   QUANTITY           Int64         \n",
-      " 8   DELAY_IN_DAYS      int64         \n",
-      "dtypes: Int64(1), datetime64[ns](1), float64(1), int64(1), object(5)\n",
-      "memory usage: 118.5+ MB\n"
+      "Index: 636 entries, 0 to 749\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   PRODUCT_ID    636 non-null    object \n",
+      " 1   PRODUCT_NAME  636 non-null    object \n",
+      " 2   PRODUCT_TYPE  636 non-null    object \n",
+      " 3   PRICE         636 non-null    float64\n",
+      "dtypes: float64(1), object(3)\n",
+      "memory usage: 24.8+ KB\n"
      ]
     },
     {
@@ -115,114 +117,69 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ORDER_ID</th>\n",
-       "      <th>USER_ID</th>\n",
-       "      <th>ESTIMATED_ARRIVAL</th>\n",
-       "      <th>TRANSACTION_DATE</th>\n",
-       "      <th>PRODUCT_NAME</th>\n",
        "      <th>PRODUCT_ID</th>\n",
+       "      <th>PRODUCT_NAME</th>\n",
+       "      <th>PRODUCT_TYPE</th>\n",
        "      <th>PRICE</th>\n",
-       "      <th>QUANTITY</th>\n",
-       "      <th>DELAY_IN_DAYS</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0248BB48-D0D0-4A11-A158-F620640A757A</td>\n",
-       "      <td>USER16283</td>\n",
-       "      <td>13 DAYS</td>\n",
-       "      <td>2020-06-04</td>\n",
-       "      <td>CD</td>\n",
-       "      <td>PRODUCT31119</td>\n",
-       "      <td>38.07</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0248BB48-D0D0-4A11-A158-F620640A757A</td>\n",
-       "      <td>USER16283</td>\n",
-       "      <td>13 DAYS</td>\n",
-       "      <td>2020-06-04</td>\n",
-       "      <td>SHOE LACE</td>\n",
-       "      <td>PRODUCT36256</td>\n",
-       "      <td>5.74</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>14473B59-6C4F-429E-89EF-CE920B209DF3</td>\n",
-       "      <td>USER08179</td>\n",
-       "      <td>8 DAYS</td>\n",
-       "      <td>2020-04-07</td>\n",
-       "      <td>ALLEN WRENCH</td>\n",
-       "      <td>PRODUCT02028</td>\n",
-       "      <td>17.28</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
+       "      <td>PRODUCT16794</td>\n",
+       "      <td>Grandmas swedish thin pancakes</td>\n",
+       "      <td>ready-made food</td>\n",
+       "      <td>12.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>14473B59-6C4F-429E-89EF-CE920B209DF3</td>\n",
-       "      <td>USER08179</td>\n",
-       "      <td>8 DAYS</td>\n",
-       "      <td>2020-04-07</td>\n",
-       "      <td>DAGGER</td>\n",
-       "      <td>PRODUCT46943</td>\n",
-       "      <td>5.74</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
+       "      <td>PRODUCT52912</td>\n",
+       "      <td>Best buttermilk pancakes</td>\n",
+       "      <td>ready-made food</td>\n",
+       "      <td>5.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>62B8FABF-4E0A-4383-8B3A-7276C77F9E8C</td>\n",
-       "      <td>USER55688</td>\n",
-       "      <td>10 DAYS</td>\n",
-       "      <td>2020-05-07</td>\n",
-       "      <td>LEATHER WALLET</td>\n",
-       "      <td>PRODUCT45904</td>\n",
-       "      <td>5.74</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <th>8</th>\n",
+       "      <td>PRODUCT17375</td>\n",
+       "      <td>Baked pears</td>\n",
+       "      <td>ready-made food</td>\n",
+       "      <td>9.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>PRODUCT26612</td>\n",
+       "      <td>Moms cheat doughnuts</td>\n",
+       "      <td>ready-made food</td>\n",
+       "      <td>6.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>PRODUCT50553</td>\n",
+       "      <td>Cheery cherry muffins</td>\n",
+       "      <td>ready-made food</td>\n",
+       "      <td>7.53</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               ORDER_ID    USER_ID ESTIMATED_ARRIVAL  \\\n",
-       "0  0248BB48-D0D0-4A11-A158-F620640A757A  USER16283           13 DAYS   \n",
-       "1  0248BB48-D0D0-4A11-A158-F620640A757A  USER16283           13 DAYS   \n",
-       "2  14473B59-6C4F-429E-89EF-CE920B209DF3  USER08179            8 DAYS   \n",
-       "3  14473B59-6C4F-429E-89EF-CE920B209DF3  USER08179            8 DAYS   \n",
-       "4  62B8FABF-4E0A-4383-8B3A-7276C77F9E8C  USER55688           10 DAYS   \n",
-       "\n",
-       "  TRANSACTION_DATE    PRODUCT_NAME    PRODUCT_ID  PRICE  QUANTITY  \\\n",
-       "0       2020-06-04              CD  PRODUCT31119  38.07         3   \n",
-       "1       2020-06-04       SHOE LACE  PRODUCT36256   5.74         3   \n",
-       "2       2020-04-07    ALLEN WRENCH  PRODUCT02028  17.28         5   \n",
-       "3       2020-04-07          DAGGER  PRODUCT46943   5.74         5   \n",
-       "4       2020-05-07  LEATHER WALLET  PRODUCT45904   5.74         3   \n",
-       "\n",
-       "   DELAY_IN_DAYS  \n",
-       "0              0  \n",
-       "1              0  \n",
-       "2              8  \n",
-       "3              8  \n",
-       "4              0  "
+       "      PRODUCT_ID                    PRODUCT_NAME     PRODUCT_TYPE  PRICE\n",
+       "0   PRODUCT16794  Grandmas swedish thin pancakes  ready-made food  12.81\n",
+       "3   PRODUCT52912        Best buttermilk pancakes  ready-made food   5.83\n",
+       "8   PRODUCT17375                     Baked pears  ready-made food   9.92\n",
+       "9   PRODUCT26612            Moms cheat doughnuts  ready-made food   6.78\n",
+       "11  PRODUCT50553           Cheery cherry muffins  ready-made food   7.53"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df_order_data.shape)\n",
-    "df_order_data.info()\n",
-    "df_order_data.head()"
+    "df_product_list.info()\n",
+    "df_product_list.head()"
    ]
   },
   {
