Creating fact table...

--- a/data_pipeline/data_pipeline_operations_department/data_cleaning_operations_department.ipynb
+++ b/data_pipeline/data_pipeline_operations_department/data_cleaning_operations_department.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "id": "4f9d00af-fbff-4abb-b128-bf38c5161c61",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "id": "e026d28b-c098-493c-a7ac-a54903e0d909",
    "metadata": {},
    "outputs": [
@@ -130,6 +130,29 @@
     "df_merge_orderData_orderDelays['DELAY IN DAYS'] = df_merge_orderData_orderDelays['DELAY IN DAYS'].astype(int)\n",
     "print(\"Succesfuly Merged order_data and order_delays\")\n",
     "df_merge_operations = df_merge_orderData_orderDelays.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "f83c55fc-5c6f-4f28-b95b-bade6a684bab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1997174, 6)\n",
+      "(11006754, 8)\n",
+      "(11006754, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_merge_orderData_lineProducts.shape)\n",
+    "print(df_merge_orderData_linePrices.shape)\n",
+    "print(df_merge_orderData_orderDelays.shape)\n",
+    "\n"
    ]
   },
   {
