Loading to db....

--- a/data_pipeline/data_pipeline_load_to_database/load_to_database.ipynb
+++ b/data_pipeline/data_pipeline_load_to_database/load_to_database.ipynb
@@ -18,13 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 149,
    "id": "1796093f-1eca-438e-82c4-c3ee8ca85356",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sqlite3"
    ]
   },
   {
@@ -1038,8 +1039,7 @@
     "df_fact_table_05 = df_fact_table_04[['ORDER_ID', 'USER_ID', 'PRODUCT_ID', 'QUANTITY', 'STAFF_ID', 'MERCHANT_ID', 'CAMPAIGN_ID']]\n",
     "df_fact_table_05 = df_fact_table_05.rename(columns={'QUANTITY': 'PRODUCT_QUANTITY'})\n",
     "\n",
-    "# Display the information about the Fact Table\n",
-    "df_fact_table_05.info()"
+    "df_fact_table = df_fact_table_05.copy()"
    ]
   },
   {
@@ -1439,12 +1439,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "465d8d18-90e2-4310-9bfd-849751a8d7f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "124887"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_transactional_campaign_data['ORDER_ID'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3094ebfa-0c83-47dc-97ae-01f2a1c9dad1",
+   "metadata": {},
+   "source": [
+    "## Step 3: Load to Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e2fc98e-d837-4762-9ca3-7cd88d07ff61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_transactional_campaign_data['ORDER_ID'].nunique()"
+    "# Load Dimensions\n",
+    "db_connection = sqlite3.connect('../../database/weekly_view.db')\n",
+    "cursor = db_connection.cursor()\n",
+    "df_order_dimension.to_sql('order_dimension', db_connection, index=False, if_exists='replace')\n",
+    "df_product_dimension.to_sql('product_dimension', db_connection, index=False, if_exists='replace')\n",
+    "df_user_dimension.to_sql('user_dimension', db_connection, index=False, if_exists='replace')\n",
+    "df_staff_dimension.to_sql('staff_dimension', db_connection, index=False, if_exists='replace')\n",
+    "df_merchant_dimension.to_sql('merchant_dimension', db_connection, index=False, if_exists='replace')\n",
+    "df_campaign_dimension.to_sql('campaign_dimension', db_connection, index=False, if_exists='replace')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Load Factable"
    ]
   }
  ],
